# yocto-bazel

./: BUILD.bazel  README.md  WORKSPACE  meta_intel.BUILD  pocky.BUILD
